--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
   <main class="wrap">
     <section class="hero">
       <h1>⏳ العدّاد لغاية العُطلة</h1>
-      <p class="lead">نعدّ لعند <strong>6 سبتمبر الساعة 5:00 مساءً</strong>… وبعدها بتكوني مُستحقة كل راحة 🤍</p>
+      <p class="lead">نعدّ لعند <strong>6 سبتمبر الساعة 5:00 مساءً</strong>… وبعدها بتكوني مُستحقة كل راحة </p>
       <span class="note">سمعت إنك دخلتي مود العُطلة من هسّا !!!!!!!!!! 😏</span>
     </section>
 
